# yolov8_ros

ptp_msgs/: CMakeLists.txt  package.xml
ptp_msgs/msg/: Pedestrian.msg  PedestrianArray.msg
yolov8_bringup/launch/: yolov9.launch.py
yolov8_ros/: setup.py
yolov8_ros/yolov8_ros/: BEV.py  bev.py  bev2graph.py  clustering.py  debug_node.py  detect_3d_node.py  laser_listener.py  tracking_node.py  yolov8_node.py
